--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </form>
 
                 <div class="contact__social grid">
-                    <a href="https://www.linkedin.com/feed/" class="contact__social-link">
+                    <a href="https://www.linkedin.com/in/vivek-bhat-427243233/" class="contact__social-link">
                         <i class="ri-linkedin-box-line"></i>
                         <span>LinkedIn</span>
                     </a>
