--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <span>Whatsapp</span>
                     </a>
 
-                    <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSBptGjdFzPMhDPRNrVXNgHZrLgCkcXKNlWxKKcmdKDcJfQdwklxhMwGgsTBxJVpSbsBwDNr" class="contact__social-link">
+                    <a href="mailto:vivekbhat0120@gmail.com" class="contact__social-link">
                         <i class="ri-mail-line"></i>
                         <Span>E-mail</Span>
                     </a>
